# pseudo3DEngine

./: CMakeLists.txt  appveyor.yml
src/: Camera.cpp  Camera.h  Circle2D.h  Idrawable.h  Menu.h  Object2D.cpp  Object2D.h  Point2D.h  Poligon2D.h  Polygon2D.cpp  Polygon2D.h  UDPSocketConnection.h  Weapon.h  Window.h  World.cpp  World.h  main.cpp  settings.h
